--- a/styles/custom.css
+++ b/styles/custom.css
@@ -44,13 +44,21 @@ th:nth-child(1) {
   z-index: 6;
   left: 0;         /* 第一列左侧固定 ‌:ml-citation{ref="1,3" data="citationList"} */
 }
-th:nth-child(2) {
+.table1-0300 table thead tr th:nth-child(2){
   z-index: 6;
   left: 50px;         /* 第一列左侧固定 ‌:ml-citation{ref="1,3" data="citationList"} */
 }
-th:nth-child(3) {
+.table1-0300 table thead tr th:nth-child(3){
   z-index: 6;
-  left: 80px;         /* 第一列左侧固定 ‌:ml-citation{ref="1,3" data="citationList"} */
+  left: 98px;         /* 第一列左侧固定 ‌:ml-citation{ref="1,3" data="citationList"} */
+}
+.table2-0300 table thead tr th:nth-child(2){
+  z-index: 6;
+  left: 50px;         /* 第一列左侧固定 ‌:ml-citation{ref="1,3" data="citationList"} */
+}
+.table2-0300 table thead tr th:nth-child(3){
+  z-index: 6;
+  left: 98px;         /* 第一列左侧固定 ‌:ml-citation{ref="1,3" data="citationList"} */
 }
 
 
@@ -58,15 +66,21 @@ th:nth-child(3) {
 td:nth-child(1) {
   left: 0;         /* 第一列左侧固定 ‌:ml-citation{ref="1,3" data="citationList"} */
 }
-td:nth-child(2) {
+.table1-0300 table tbody tr td:nth-child(2) {
   left: 50px;     /* 第二列根据第一列宽度偏移 ‌:ml-citation{ref="2,3" data="citationList"} */
 }
-td:nth-child(3) {
-  left: 80px;     /* 第二列根据第一列宽度偏移 ‌:ml-citation{ref="2,3" data="citationList"} */
+.table1-0300 table tbody tr td:nth-child(3) {
+  left: 98px;     /* 第二列根据第一列宽度偏移 ‌:ml-citation{ref="2,3" data="citationList"} */
+}
+.table2-0300 table tbody tr td:nth-child(2) {
+  left: 50px;     /* 第二列根据第一列宽度偏移 ‌:ml-citation{ref="2,3" data="citationList"} */
+}
+.table2-0300 table tbody tr td:nth-child(3) {
+  left: 98px;     /* 第二列根据第一列宽度偏移 ‌:ml-citation{ref="2,3" data="citationList"} */
 }
 
 .row div {
-  max-width: 80%   !important;
+  max-width: 100%   !important;
 }
 
 
